# hacknation_2026

./: .env.example  .gitignore  CLAUDE.md  DEMO_VIDEO_LINK.txt  README.md  SYSTEM_FLOW.md  architecture.puml  notes.md  render.yaml  verify_db.py
backend/: .env.example  HANDOFF_DATABASE.md  HANDOFF_FRONTEND.md  README.md  db_cleanup.sql  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/api/: __init__.py  conversation_routes.py  endpoints.py  learning_routes.py
backend/app/api/tests/: test_conversation_routes.py  test_learning_routes.py
backend/app/core/: __init__.py  config.py  llm.py  llm_client.py
backend/app/data/: __init__.py  conversations.py  suggestions.py  tickets.py
backend/app/db/: __init__.py  client.py
backend/app/models/: __init__.py
backend/app/rag/: README.md  REWRITE_SUMMARY.md  __init__.py  requirements.txt
backend/app/rag/agent/: __init__.py  graph.py  nodes.py  (+1 more)
backend/app/schemas/: __init__.py  actions.py  conversations.py  knowledge.py  learning.py  messages.py  tickets.py
backend/app/services/: __init__.py  data_sanitizer.py  embedding_service.py  knowledge_service.py  learning_event_queries.py  learning_service.py  ticket_service.py
backend/app/tools/: __init__.py
backend/db/: FINAL_SCHEMA.sql  MIGRATION_CATCHUP.sql  schema.sql
backend/db/migrations/: 001_create_tables.sql  002_create_indexes.sql  003_seed_categories.sql  004_update_confidence_rpc.sql  005_rag_execution_log.sql
backend/scripts/: seed_database.py  seed_mock_data.py  test_live_pipeline.py
(+71 files in other folders)
